Add missing slot and improve code readability